tests/baselines/reference/recursiveTypeParameterConstraintReferenceLacksTypeArgs.errors.txt
==== tests/cases/compiler/recursiveTypeParameterConstraintReferenceLacksTypeArgs.ts (1 errors) ====
    class A<T extends A> { }
                      ~
!!! recursiveTypeParameterConstraintReferenceLacksTypeArgs.ts(1,19): error TS2173: Generic type references must include all type arguments.